test/Macros/DebugDescription/error_interpolation_expression.code
// REQUIRES: language_language_parser

// RUN: %empty-directory(%t)
// RUN: %target-language-frontend %s -language-version 5 -module-name main -disable-availability-checking -typecheck -verify -plugin-path %language-plugin-dir

@DebugDescription
struct MyStruct {
  // expected-error @+1 {{only references to stored properties are allowed}}
  var debugDescription: String { "\(1)" }
}
